# valhalla222

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_DIAGRAM.md  AZURE_CLI_INSTALLATION_STATUS.md  AZURE_DEPLOYMENT_GUIDE.md  CHANGELOG_LATEST.md  CHECKLIST.md  COMPLETION_SUMMARY.py  COMPREHENSIVE_REPORT.md  Dockerfile  Dockerfile.prod  FINAL_DELIVERY_SUMMARY.md  FINAL_GUIDE.md  FIXES_SUMMARY.md  FULL_START.vbs  HOW_TO_RUN_GUI.md  HOW_TO_USE.md  IMPLEMENTATION_SUMMARY.md  LAUNCH.bat  LAUNCHER.bat  LAUNCHER.ps1  LAUNCHER_GUIDE.md  LOGIN_GUIDE.md  LOGIN_README.md  NEXT_STEPS.md  OPEN.bat  Open-Agentic-IAM.bat  PRE_DEPLOYMENT_CHECKLIST.md  PROJECT_COMPLETION_STATUS.md  PROJECT_REPORT.md  QA_INDEX.md  QA_QUICK_START.md  QA_SYSTEM_IMPLEMENTATION_COMPLETE.md  QA_SYSTEM_README.md  QUICK_COMMANDS.md  QUICK_LAUNCHER.md  QUICK_START.md  README.md  (+83 more)
.azure/: deployment-plan.md
.devcontainer/: devcontainer.json
.github/workflows/: ai-cli-smoke.yml  azure-deploy.yml  ci.yml  deploy.yml  playwright-e2e.yml  pre-commit.yml  security.yml
api/: app.py  dependencies.py  graphql.py  main.py  models.py  rate_limiting.py
api/routers/: __init__.py  agents.py  audit.py  authentication.py  authorization.py  health.py  intelligence.py  mobile.py  qa.py  sessions.py
audit/: blockchain.py
config/: settings.py
core/: agentic_iam.py
dashboard/: __init__.py  realtime.py  report_after_merge.py  reports_streamlit.py  utils.py
dashboard/components/: __init__.py  agent_management.py  agent_selection.py  ai_assistant.py  ai_kb.py  risk_assessment.py
demo/: valhalla_onboarding.json
docs/: DEVELOPMENT.md  README_DETAILED.md  incident_report_sample.md
docs/api/: API_REFERENCE.md
encryption/: quantum.py
federation/: multi_cloud.py
infra/: main.bicep  main.bicepparams
infra/resources/: container-apps.bicep
intelligence/: threat_ai.py
k8s/: configmap.yaml  deployment.yaml  namespace.yaml  operator.py
mobile/: sdk.py
monitoring/prometheus/: prometheus.yml
scripts/: ask_ai.py  attack_detector.ps1  check_all.py  commit_and_push.ps1  generate_signed_url.py  import_scan.ps1  migrate.py  performance_metrics.py  performance_test.py  register_test_agent.py  reset_admin_password.py  run_full_demo.ps1  secret_rotate.py  security_hardening.py  security_scan.py  set_full_permissions_and_shortcut.ps1  test_data_generator.py  update_lockfile.py
secrets/: key_vault.py
tests/: test_agent_registry.py  test_api_routes.py  test_database.py  test_new_features.py  test_qa_system.py  test_reports_alerts_auth.py  test_sign_url.py
tests/e2e/: helpers.py  test_admin_user_crud_playwright.py  test_ai_assistant_playwright.py  test_create_user_playwright.py  test_login_playwright.py  test_register_agent_playwright.py  test_risk_assessment_playwright.py
tests/test_integration/: test_api_integration.py
tests/test_unit/: test_agent_visibility.py  test_ai_cli.py  test_bloome_post_login_redirect.py  test_bloome_store.py  test_database_path_defaults.py  test_database_user_crud.py  test_navigation_query_params.py
tests/test_unit/test_api/: test_agents.py  test_authentication.py
tests/test_unit/test_core/: test_agentic_iam.py
utils/: advanced_features.py  cert_validation.py  faq_engine.py  logger.py  logging_config.py  rbac.py  security.py
